--- a/web/index.html
+++ b/web/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 	<head>
-		<title>Hello World! Site Title</title>
+		<meta charset="UTF-8">
+		<title>Life-Dash</title>
 	</head>
 	<body>
-		<h1>Hello World!</h1>
+		<div id="app"></div>
+		<script src="dist/bundle.js"></script>
 	</body>
-	<script src="dist/main.bundle.js"></script>
 </html>
